[package]
name = "token-jwt-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
derive_builder = "0.20.2"
jsonwebtoken = "9.3.1"
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
subtle = "2.6.1"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[features]
default = []
msgpack = ["rmp-serde"]
